# Galanthus

./: .editorconfig  .gitignore  Galanthus.sln  README.md
.github/workflows/: c-cpp.yml  c_cpp.yml  dotnet.yml
Crypto/: meson.build
Galanthus/: CompressionMethod.cs  Galanthus.csproj  GameManager.cs  KeyManager.cs  Platform.cs  SdfToc.cs
Galanthus/Interfaces/: ILogger.cs
Galanthus/Structs/: Asset.cs  DataSlice.cs  DataSliceIndexSettings.cs  File.cs  Locale.cs  Tag.cs  TocHeader.cs  Unk.cs
Galanthus/Utils/: Crypto.cs  KeyManager.cs  Lz4.cs  Oodle.cs  OpenSsl.cs  ZLib.cs  ZStd.cs
GalanthusCli/: GalanthusCli.csproj  Program.cs
StreamUtils/: Block.cs  BlockStream.cs  DataStream.cs  Endian.cs  StreamUtils.csproj
StreamUtils/Structs/: DataSlice.cs  File.cs  Locale.cs  Tag.cs  TocHeader.cs  Unk.cs
